==> xxaine/ethernet_nucleo_f429/MODBUS-LIB/Src/Modbus.c <==
#include "FreeRTOS.h"
#include "cmsis_os.h"
#include "task.h"
#include "queue.h"
#include "main.h"
#include "Modbus.h"
#include "timers.h"
#include "semphr.h"
#include "api.h"
#include "ip4_addr.h"
#include "netif.h"
#define ENABLE_USART_DMA 0
#define bitRead(value, bit) (((value) >> (bit)) & 0x01)
#define bitSet(value, bit) ((value) |= (1UL << (bit)))
#define bitClear(value, bit) ((value) &= ~(1UL << (bit)))
#define bitWrite(value, bit, bitvalue) ((bitvalue) ? bitSet(value, bit) : bitClear(value, bit))
#define lowByte(w) ((w) & 0xff)
#define highByte(w) ((w) >> 8)

void ModbusInit(modbusHandler_t *modH) {

	if (numberHandlers < MAX_M_HANDLERS) {

		//Initialize the ring buffer

		RingClear(&modH->xBufferRX);

		if (modH->uModbusType == MB_SLAVE) {
			//Create Modbus task slave
#if ENABLE_TCP == 1
		  if( modH->xTypeHW == TCP_HW)
		  {
			  modH->myTaskModbusAHandle = osThreadNew(StartTaskModbusSlave, modH, &myTaskModbusA_attributesTCP);
		  }
		  else{
			  modH->myTaskModbusAHandle = osThreadNew(StartTaskModbusSlave, modH, &myTaskModbusA_attributes);
		  }
#else
			modH->myTaskModbusAHandle = osThreadNew(StartTaskModbusSlave, modH,
					&myTaskModbusA_attributes);
#endif

		} else if (modH->uModbusType == MB_MASTER) {
			//Create Modbus task Master  and Queue for telegrams

#if ENABLE_TCP == 1
		  if( modH->xTypeHW == TCP_HW)
		  {
		     modH->myTaskModbusAHandle = osThreadNew(StartTaskModbusMaster, modH, &myTaskModbusB_attributesTCP);
		  }
		  else
		  {
		     modH->myTaskModbusAHandle = osThreadNew(StartTaskModbusMaster, modH, &myTaskModbusB_attributes);
		  }
#else
			modH->myTaskModbusAHandle = osThreadNew(StartTaskModbusMaster, modH,
					&myTaskModbusB_attributes);
#endif

			modH->xTimerTimeout = xTimerCreate("xTimerTimeout", // Just a text name, not used by the kernel.
					modH->u16timeOut,     		// The timer period in ticks.
					pdFALSE, // The timers will auto-reload themselves when they expire.
					(void*) modH->xTimerTimeout, // Assign each timer a unique id equal to its array index.
					(TimerCallbackFunction_t) vTimerCallbackTimeout // Each timer calls the same callback when it expires.
					);

			if (modH->xTimerTimeout == NULL) {
				while (1)
					; //error creating timer, check heap and stack size
			}

			modH->QueueTelegramHandle = osMessageQueueNew(MAX_TELEGRAMS,
					sizeof(modbus_t), &QueueTelegram_attributes);

			if (modH->QueueTelegramHandle == NULL) {
				while (1)
					; //error creating queue for telegrams, check heap and stack size
			}

                } else {
			while (1)
				; //Error Modbus type not supported choose a valid Type
		}

		if (modH->myTaskModbusAHandle == NULL) {
			while (1)
				; //Error creating Modbus task, check heap and stack size
		}

		modH->xTimerT35 = xTimerCreate("TimerT35", // Just a text name, not used by the kernel.
				T35,     // The timer period in ticks.
				pdFALSE, // The timers will auto-reload themselves when they expire.
				(void*) modH->xTimerT35, // Assign each timer a unique id equal to its array index.
				(TimerCallbackFunction_t) vTimerCallbackT35 // Each timer calls the same callback when it expires.
				);
		if (modH->xTimerT35 == NULL) {
			while (1)
				; //Error creating the timer, check heap and stack size
		}

		modH->ModBusSphrHandle = osSemaphoreNew(1, 1, &ModBusSphr_attributes);

		if (modH->ModBusSphrHandle == NULL) {
			while (1)
				; //Error creating the semaphore, check heap and stack size
		}

		mHandlers[numberHandlers] = modH;
		numberHandlers++;
            } else {
		while (1)
			; //error no more Modbus handlers supported
	}

}

void ModbusStart(modbusHandler_t *modH) {

	if (modH->xTypeHW != USART_HW && modH->xTypeHW != TCP_HW
			&& modH->xTypeHW != USB_CDC_HW && modH->xTypeHW != USART_HW_DMA) {

		while (1)
			; //ERROR select the type of hardware
	}

	if (modH->xTypeHW == USART_HW_DMA && ENABLE_USART_DMA == 0) {
		while (1)
			; //ERROR To use USART_HW_DMA you need to enable it in the ModbusConfig.h file
	}

	if (modH->xTypeHW == USART_HW || modH->xTypeHW == USART_HW_DMA) {

		if (modH->EN_Port != NULL) {
			// return RS485 transceiver to receive mode
			HAL_GPIO_WritePin(modH->EN_Port, modH->EN_Pin, GPIO_PIN_RESET);
		}

		if (modH->uModbusType == MB_SLAVE && modH->u16regs == NULL) {
			while (1)
				; //ERROR define the DATA pointer shared through Modbus
		}

		//check that port is initialized
		while (HAL_UART_GetState(modH->port) != HAL_UART_STATE_READY) {

		}

#if ENABLE_USART_DMA ==1
          if( modH->xTypeHW == USART_HW_DMA )
          {


        	  if(HAL_UARTEx_ReceiveToIdle_DMA(modH->port, modH->xBufferRX.uxBuffer, MAX_BUFFER ) != HAL_OK)
        	   {
        	         while(1)
        	         {
        	                    	  //error in your initialization code
        	         }
        	   }
        	  __HAL_DMA_DISABLE_IT(modH->port->hdmarx, DMA_IT_HT); // we don't need half-transfer interrupt

          }
          else{

        	  // Receive data from serial port for Modbus using interrupt
        	  if(HAL_UART_Receive_IT(modH->port, &modH->dataRX, 1) != HAL_OK)
        	  {
        	           while(1)
        	           {
        	                       	  //error in your initialization code
        	           }
        	  }

          }


#else
		// Receive data from serial port for Modbus using interrupt
		if (HAL_UART_Receive_IT(modH->port, &modH->dataRX, 1) != HAL_OK) {
			while (1) {
				//error in your initialization code
			}
		}

#endif

		if (modH->u8id != 0 && modH->uModbusType == MB_MASTER) {
			while (1) {
				//error Master ID must be zero
			}

		}

		if (modH->u8id == 0 && modH->uModbusType == MB_SLAVE) {
			while (1) {
				//error Master ID must be zero
			}

		}

	}

#if ENABLE_TCP == 1



#endif

	modH->u8lastRec = modH->u8BufferSize = 0;
	modH->u16InCnt = modH->u16OutCnt = modH->u16errCnt = 0;

}

int16_t getRxBuffer(modbusHandler_t *modH) {

	int16_t i16result;

	if (modH->xTypeHW == USART_HW) {
		HAL_UART_AbortReceive_IT(modH->port); // disable interrupts to avoid race conditions on serial port
	}

	if (modH->xBufferRX.overflow) {
		RingClear(&modH->xBufferRX); // clean up the overflowed buffer
		i16result = ERR_BUFF_OVERFLOW;
	} else {
		modH->u8BufferSize = RingGetAllBytes(&modH->xBufferRX, modH->u8Buffer);
		modH->u16InCnt++;
		i16result = modH->u8BufferSize;
	}

	if (modH->xTypeHW == USART_HW) {
		HAL_UART_Receive_IT(modH->port, &modH->dataRX, 1);
	}

	return i16result;
}

static void sendTxBuffer(modbusHandler_t *modH) {
	// when in slaveType and u8AddressMode == ADDRESS_BROADCAST, do not send anything
	if (modH->uModbusType == MB_SLAVE
			&& modH->u8AddressMode == ADDRESS_BROADCAST) {
		modH->u8BufferSize = 0;
		// increase message counter
		modH->u16OutCnt++;
		return;
	}

	// append CRC to message

#if  ENABLE_TCP == 1
if(modH->xTypeHW != TCP_HW)
	 {
#endif

	uint16_t u16crc = calcCRC(modH->u8Buffer, modH->u8BufferSize);
	modH->u8Buffer[modH->u8BufferSize] = u16crc >> 8;
	modH->u8BufferSize++;
	modH->u8Buffer[modH->u8BufferSize] = u16crc & 0x00ff;
	modH->u8BufferSize++;

#if ENABLE_TCP == 1
	 }
#endif

#if ENABLE_USB_CDC == 1 || ENABLE_TCP == 1
    if(modH->xTypeHW == USART_HW || modH->xTypeHW == USART_HW_DMA )
    {
#endif

	if (modH->EN_Port != NULL) {
		//enable transmitter, disable receiver to avoid echo on RS485 transceivers
		HAL_HalfDuplex_EnableTransmitter(modH->port);
		HAL_GPIO_WritePin(modH->EN_Port, modH->EN_Pin, GPIO_PIN_SET);
	}

#if ENABLE_USART_DMA ==1
    	if(modH->xTypeHW == USART_HW)
    	{
#endif
	// transfer buffer to serial line IT
	HAL_UART_Transmit_IT(modH->port, modH->u8Buffer, modH->u8BufferSize);

#if ENABLE_USART_DMA ==1
    	}
        else
        {
        	//transfer buffer to serial line DMA
        	HAL_UART_Transmit_DMA(modH->port, modH->u8Buffer, modH->u8BufferSize);

        }
#endif

	ulTaskNotifyTake(pdTRUE, 250); //wait notification from TXE interrupt
	/*
	 * If you are porting the library to a different MCU check the
	 * USART datasheet and add the corresponding family in the following
	 * preprocessor conditions
	 */
#if defined(STM32H7)  || defined(STM32F3) || defined(STM32L4) || defined(STM32L082xx) || defined(STM32F7) || defined(STM32WB) || defined(STM32G070xx) || defined(STM32F0) || defined(STM32G431xx) || defined(STM32H5)
	while ((modH->port->Instance->ISR & USART_ISR_TC) == 0)
#else
          // F429, F103, L152 ...
	  while((modH->port->Instance->SR & USART_SR_TC) ==0 )
#endif
	{
		//block the task until the the last byte is send out of the shifting buffer in USART
	}

	if (modH->EN_Port != NULL) {

		//return RS485 transceiver to receive mode
		HAL_GPIO_WritePin(modH->EN_Port, modH->EN_Pin, GPIO_PIN_RESET);
		//enable receiver, disable transmitter
		HAL_HalfDuplex_EnableReceiver(modH->port);

	}

	// set timeout for master query
	if (modH->uModbusType == MB_MASTER) {
		xTimerReset(modH->xTimerTimeout, 0);
	}
#if ENABLE_USB_CDC == 1 || ENABLE_TCP == 1
    }

#if ENABLE_USB_CDC == 1
    else if(modH->xTypeHW == USB_CDC_HW)
	{
    	CDC_Transmit_FS(modH->u8Buffer,  modH->u8BufferSize);
    	// set timeout for master query
    	if(modH->uModbusType == MB_MASTER )
    	{
    	   	xTimerReset(modH->xTimerTimeout,0);
    	}

	}
#endif

#if ENABLE_TCP == 1

    else if(modH->xTypeHW == TCP_HW)
    	{

    	  struct netvector  xNetVectors[2];
    	  uint8_t u8MBAPheader[6];
    	  size_t uBytesWritten;


    	  u8MBAPheader[0] = highByte(modH->u16TransactionID); // this might need improvement the transaction ID could be validated
    	  u8MBAPheader[1] = lowByte(modH->u16TransactionID);
    	  u8MBAPheader[2] = 0; //protocol ID
    	  u8MBAPheader[3] = 0; //protocol ID
    	  u8MBAPheader[4] = 0; //highbyte data length always 0
    	  u8MBAPheader[5] = modH->u8BufferSize; //highbyte data length

    	  xNetVectors[0].len = 6;
    	  xNetVectors[0].ptr = (void *) u8MBAPheader;

    	  xNetVectors[1].len = modH->u8BufferSize;
    	  xNetVectors[1].ptr = (void *) modH->u8Buffer;


    	  netconn_set_sendtimeout(modH->newconns[modH->newconnIndex].conn, modH->u16timeOut);
    	  err_enum_t err;

    	  err = netconn_write_vectors_partly(modH->newconns[modH->newconnIndex].conn, xNetVectors, 2, NETCONN_COPY, &uBytesWritten);
    	  if (err != ERR_OK )
    	  {

    		 // ModbusCloseConn(modH->newconns[modH->newconnIndex].conn);
    		 ModbusCloseConnNull(modH);

    	  }


    	  if(modH->uModbusType == MB_MASTER )
    	  {
    	    xTimerReset(modH->xTimerTimeout,0);
    	  }
    	}

#endif

#endif

	modH->u8BufferSize = 0;
	// increase message counter
	modH->u16OutCnt++;

}
